# cli-complete

./: .gitignore  README.md  eval_benchmark.py  main.py  pyproject.toml  train.py
configs/: training.toml
data/bash/: train.cm  train.nl
qwen-nl2bash-adapter/: README.md  adapter_config.json  training_args.json
