[project]
name = "cli-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.5",
    "huggingface-hub>=1.16.1",
    "inquirer>=3.4.1",
    "peft>=0.19.1",
    "torch>=2.12.0",
    "transformers>=5.9.0",
    "trl>=1.5.0",
]
